[NEW] Adds imprint, switches pages from ERB to Slim, layout changes

--- a/site/_config.yml
+++ b/site/_config.yml
@@ -1,2 +1,4 @@
-site_title: Hendrik Mans
-site_url: http://hmans.io
+site_title: Carlo Zottmann
+site_url: https://carlo.zottmann.org
+site_description: Alright, hi! I'm Carlo, a freelance software consultant & coach from Munich, player of videogames, husband, futurist, comical element, P.U.N.K. (professional uncle, no kids) — among other things.
+author: Carlo Zottmann <carlo@zottmann.org>
