[CHG] Text and style changes

--- a/site/_config.yml
+++ b/site/_config.yml
@@ -1,4 +1,4 @@
 site_title: Carlo Zottmann
 site_url: https://carlo.zottmann.org
-site_description: Alright, hi! I'm Carlo, a freelance software consultant & coach from Munich, player of videogames, husband, futurist, comical element, P.U.N.K. (professional uncle, no kids) — among other things.
+site_description: "The personal blog of Carlo Zottmann — freelance software consultant & coach, player of videogames, husband, futurist, comical element, P.U.N.K. (professional uncle, no kids)."
 author: Carlo Zottmann <carlo@zottmann.org>
