--- a/site/_config.yml
+++ b/site/_config.yml
@@ -1,4 +1,4 @@
 site_title: Carlo Zottmann
 site_url: https://carlo.zottmann.org
-site_description: "The personal blog of Carlo Zottmann — freelance software consultant & coach, player of videogames, husband, futurist, comical element, P.U.N.K. (professional uncle, no kids)."
+site_description: "The personal blog of Carlo Zottmann — freelance software consultant & coach, player of videogames, husband, futurist, comical element, P.U.N.K. (professional uncle, no kids). Hello from Munich, Germany!"
 author: Carlo Zottmann <carlo@zottmann.org>
