--- a/site/.htaccess
+++ b/site/.htaccess
@@ -1,2 +1,3 @@
 RewriteEngine On
-RewriteRule ^(2.*)$ /posts/$1 [R=301,L]
+RewriteRule ^(2.*)\/$ /posts/$1.html [R=301,L]
+RewriteRule ^rss\/.*$ /rss.xml [R=301,L]
